--- a/compra/Dockerfile
+++ b/compra/Dockerfile
@@ -1,6 +1,9 @@
 FROM amazoncorretto:11-alpine
 
-COPY target/compra-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ARG JAR_FILE=target/*.jar
 
-EXPOSE 8080
+COPY ${JAR_FILE} app.jar
+
+EXPOSE 8082
+
+ENTRYPOINT ["java","-jar","/app.jar"]
