--- a/compra/src/main/resources/application.properties
+++ b/compra/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.data.mongodb.database=db
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.database=db
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+
+spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=db_compra
+
 server.port=8080
-
-
 kafka.config.address=localhost:9092
