--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,80 +1,154 @@
 version: "3"
+
 services:
 
-  mongo-banco:
-    image: mongo:4
+  
+dbweekend-mongo-express:
+    image: mongo-express
+    ports:
+      - 19081:8081
+    environment:
+      ME_CONFIG_BASICAUTH_USERNAME: renatogroffe
+      ME_CONFIG_BASICAUTH_PASSWORD: MongoExpress2019!
+      ME_CONFIG_MONGODB_PORT: 27017
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: MongoDB2019!
+    links:
+      - mongo
     networks:
-      - shop-commerce
+      - dbweekend
+
+mongo-produto:
+    image: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: MongoDBproduto
+    ports:
+      - "37017:27017"
+#    volumes:
+#      - /home/armando/Desenvolvimento/Docker/Volumes/Database-Weekend/MongoDB:/data/db
+    networks:
+      - ecommerce-net
+
+
+mongo-usuario:
+    image: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: MongoDBusuario
+    ports:
+      - "37017:27017"
+#    volumes:
+#      - /home/armadno/Desenvolvimento/Docker/Volumes/Database-Weekend/MongoDB:/data/db
+    networks:
+      - ecommerce-net
+
+ zookeeper:
+#    container_name: zookeeper
+    restart: always
+    image: confluentinc/cp-zookeeper:latest
+    ports:
+      - "22181:2181"
+    networks:
+      - ecommerce-net
+    environment:
+      -  ZOOKEEPER_CLIENT_PORT=2181
+      -  ZOOKEEPER_TICK_TIME=2000
+
+
+ kafka:
+#    container_name: kafka
+    hostname: kafka
+    image: confluentinc/cp-kafka:latest
     restart: always
     ports:
-      - "27017:27017"
-
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.0.1
-    networks:
-      - shop-commerce
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-
-
-  kafka:
-    image: confluentinc/cp-kafka:7.0.1
-    container_name: kafka
-    networks:
-      - shop-commerce
-    ports:
       - "9092:9092"
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
     depends_on:
       - zookeeper
+    links:
+      - zookeeper:zookeeper
+    networks:
+      - ecommerce-net
+
+  redis-compose:
+    image: redis:alpine
+    hostname: redis-compose
+    command: ["redis-server","--bind","redis-compose","--port","6379"]
+    ports:
+      - "6379:6379"
+    networks:
+      - ecommerce-net
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_INTERNAL://localhost:29092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
 
+  postgres-compose:
+    image: postgres
+    ports:
+      - "5432:5432"
+    networks:
+      - ecommerce-net
+    environment:
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=vendas
 
-  user-service:
-    image: user:1.0
+# API
+  usuario-api:
+    build: ./usuario-api
+    image: usuario-api:latest
     ports:
       - "8083:8083"
+    depends_on:
+      - mongo-banco
     networks:
-      - shop-commerce
+      - ecommerce-net
+    links:
+      - mongo-banco
     environment:
       - SPRING_DATA_MONGODB_HOST=mongo-banco
       - SPRING_DATA_MONGODB_PORT=27017
       - SPRING_DATASOURCE_PASSWORD=root
-      - SERVER_PORT=8080
+      - SERVER_PORT=8083
 
-  produto-service:
-    image: produto:1.0
+  produto-api:
+    build: ./produto-api
+    image: produto-api:latest
     ports:
       - "8081:8081"
     networks:
-      - shop-commerce
+      - ecommerce-net
     depends_on:
-      - user-service
+      - postgres-compose
+      - redis-compose
     environment:
-      - SPRING_DATA_MONGODB_HOST=mongo-banco
-      - SPRING_DATA_MONGODB_PORT=27017
-      - SPRING_DATASOURCE_PASSWORD=root
-      - SERVER_PORT=8080
-      
+      - DB_SERVER=postgres-compose
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=produtos
+      - SPRING_REDIS_HOST=redis-compose
+      - SPRING_REDIS_PORT=6379
+    links:
+      - postgres-compose
+      - redis-compose
 
-  compra-service:
-    image: compra:1.0
+  compras-api:
+    build: ./vendas-api
+    image: vendas-api:latest
     ports:
-      - "8082:8082"
+      - "8080:8080"
     networks:
-      - shop-commerce
+      - ecommerce-net
     depends_on:
-      - user-service
-      - produto-service
+      - mongo-banco
+      - vendas-validator
       - kafka
     environment:
       - SPRING_DATA_MONGODB_HOST=mongo-banco
@@ -82,8 +156,26 @@ services:
       - SPRING_DATASOURCE_PASSWORD=root
       - SERVER_PORT=8080
       - KAFKA_ADDRESS=kafka:9092
+    links:
+      - mongo-banco
+      - kafka:kafka
 
+  vendas-validator:
+    build: ./vendas-validador
+    image: compras-validator:latest
+    ports:
+      - "8082:8082"
+    networks:
+      - ecommerce-net
+    depends_on:
+      - vendas-api
+      - kafka
+    environment:
+      - KAFKA_ADDRESS=kafka:9092
+      - WEBCLIENT_URL=http://produto-api:8081
+    links:
+      - produto-api:produto-api
+      - kafka:kafka 
 
 networks:
-  shop-commerce:
-    driver: bridge
+  ecommerce-net:
