--- a/produto/src/main/resources/application.properties
+++ b/produto/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-spring.data.mongodb.database=db
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.database=produto
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host= localhost
 
-server.port=8082
+spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=db_produto
+
+server.port=8081
+
+
+
+
+
