--- a/produto/src/main/resources/application.properties
+++ b/produto/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-#spring.data.mongodb.database=produto
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.host= localhost
+#Aplicação
+server.port=8085
 
-spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=db_produto
+#Banco
+spring.data.mongodb.database=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.host= localhost
 
-server.port=8081
+#spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=db_produto
+
+
 
 
 
