--- a/cliente/src/main/resources/application.properties
+++ b/cliente/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-server.port=8082
-spring.application.name=Cliente-API
+server.port=8086
+
+spring.data.mongodb.database=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+
+#spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=db_cliente
+
+spring.application.name=cliente-api
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.endpoint.health.show-details=always
-#spring.data.mongodb.database=db
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.host=localhost
-spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=db_cliente
 
 
 
