--- a/compra-validator/src/main/resources/application.properties
+++ b/compra-validator/src/main/resources/application.properties
@@ -1,8 +1,16 @@
+server.port=8088
 
-spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=db_compra
+spring.data.mongodb.database=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+
+#spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=db_compra
 
 kafka.config.address=localhost:9092
 
-server.port=8084
+spring.application.name=compra-validator-api
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.endpoint.health.show-details=always
 
