--- a/compra/src/main/resources/application.properties
+++ b/compra/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-#spring.data.mongodb.database=db
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.host=localhost
+server.port=8087
 
-#spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
-#spring.data.mongodb.database=db_compra
-
-server.port=8083
 kafka.config.address=localhost:9092
+
+spring.application.name=cpmpra-api
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.endpoint.health.show-details=always
