--- a/produto/src/main/resources/application.properties
+++ b/produto/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-#Aplicação
 server.port=8085
 
-#Banco
 spring.data.mongodb.database=mongodb
 spring.data.mongodb.port=27017
 spring.data.mongodb.host= localhost
@@ -9,8 +7,10 @@ spring.data.mongodb.host= localhost
 #spring.data.mongodb.uri=mongodb+srv://moraesarmando:ETDM6AbVMYd5nFHO@ecommerce.w32sk.mongodb.net/?retryWrites=true&w=majority
 #spring.data.mongodb.database=db_produto
 
-
-
+spring.application.name=produto-api
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.endpoint.health.show-details=always
 
 
 
